infrastructure/controllers/traefik/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: traefik
  namespace: kube-system
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: pihole
      protocol: HTTPS
      port: 443
      hostname: pihole.umbos.net
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: pihole-certificate
